# perturbation-kernel

./: .gitignore  Cargo.toml  README.md
app/: README.md
app/server/: .env.example  package-lock.json  package.json
app/server/src/: index.js  leanFiles.js  leanRepl.js
app/web/: index.html  package-lock.json  package.json  vite.config.ts
app/web/src/: App.tsx  api.ts  lean-highlight.tsx  styles.css  types.ts
app/web/src/components/: FileList.tsx  RunPanel.tsx  StructureOutline.tsx
lean/PerturbationKernel/: PerturbationKernel.lean  README.md  lake-manifest.json  lakefile.toml
lean/PerturbationKernel/PerturbationKernel/: Basic.lean  Conformance.lean  Examples.lean  NHSTCritique.lean  SampleComplexity.lean  Stability.lean
meal-match/: .gitignore  README.md  package-lock.json  package.json
meal-match/app/: globals.css  layout.tsx  page.tsx
meal-match/app/match/: page.tsx
meal-match/app/meals/[id]/: page.tsx
meal-match/app/tables/: page.tsx
meal-match/components/: MealCard.tsx  ScoreBadge.tsx
meal-match/lib/: data.ts  matching.test.ts  matching.ts  store.tsx  types.ts
src/: abi.rs  config.rs  engine.rs  examples.rs  forward.rs  invariance.rs  lib.rs  perturbation.rs  report.rs
tests/: conformance.rs  determinism.rs  sample_complexity.rs
