[package]
name = "perturbation-kernel"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Reference Rust implementation of the perturbation-kernel object (SCHEMA.md v1.0.0)."
repository = "https://github.com/godofecht/theory-of-everything"
readme = "README.md"

[lib]
name = "perturbation_kernel"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"
